Fixing Code and Adding some optimise codes